# rustracer

./: .gitattributes  .travis.yml  Cargo.toml  README.md  bitbucket-pipelines.yml
models/: README.md
renders/: README.md
renders/material_tests/: README.md
rustracer-cli/: Cargo.toml
rustracer-cli/src/: argparse.rs  logging.rs  main.rs
rustracer-core/: Cargo.toml
rustracer-core/src/: api.rs  blockedarray.rs  bounds.rs  camera.rs  cie.rs  efloat.rs  fileutil.rs  film.rs  floatfile.rs  imageio.rs  interaction.rs  interpolation.rs  lib.rs  lightdistrib.rs  mipmap.rs  noise.rs  paramset.rs  primitive.rs  ray.rs  renderer.rs  rng.rs  samplescenes.rs  scene.rs  spectrum.rs  stats.rs  transform.rs
rustracer-core/src/bsdf/: bxdf.rs  fourier.rs  fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs
rustracer-core/src/bvh/: mod.rs
rustracer-core/src/display/: mod.rs
rustracer-core/src/filter/: boxfilter.rs  gaussian.rs  mitchell.rs  mod.rs  triangle.rs
rustracer-core/src/geometry/: matrix.rs  mod.rs  normal.rs  point.rs  vector.rs
rustracer-core/src/integrator/: ao.rs  directlighting.rs  mod.rs  normal.rs  path.rs  whitted.rs
rustracer-core/src/light/: diffuse.rs  distant.rs  infinite.rs  mod.rs  point.rs
rustracer-core/src/material/: disney.rs  fourier.rs  glass.rs  matte.rs  metal.rs  mirror.rs  mixmat.rs  mod.rs  plastic.rs  substrate.rs  translucent.rs  uber.rs
rustracer-core/src/pbrt/: lexer.rs  mod.rs  parser.rs
rustracer-core/src/sampler/: lowdiscrepancy.rs  mod.rs  sobol.rs  sobolmatrices.rs  zerotwosequence.rs
rustracer-core/src/sampling/: distribution1d.rs  distribution2d.rs  mod.rs
rustracer-core/src/shapes/: cylinder.rs  disk.rs  mesh.rs  mod.rs  plymesh.rs  sphere.rs
rustracer-core/src/stats/: macros.rs  mod.rs
rustracer-core/src/texture/: checkerboard.rs  constant.rs  fbm.rs  imagemap.rs  mix.rs  mod.rs  scale.rs  uv.rs
rustracer-core/tests/: efloat.rs  shapes.rs
src/: api.rs  argparse.rs  block_queue.rs  blockedarray.rs  bounds.rs  camera.rs  cie.rs  colour.rs  efloat.rs  fileutil.rs  film.rs  geometry.rs  image.rs  imageio.rs  instance.rs  interaction.rs  intersection.rs  lib.rs  light.rs  lightdistrib.rs  logging.rs  main.rs  material.rs  mipmap.rs  noise.rs  paramset.rs  partition.rs  plane.rs  point.rs  primitive.rs  ray.rs  renderer.rs  rng.rs  samplescenes.rs  scene.rs  skydome.rs  spectrum.rs  sphere.rs  stats.rs  transform.rs  (+1 more)
src/bsdf/: bxdf.rs  fresnel.rs  lambertian.rs  microfacet.rs  mod.rs  oren_nayar.rs
src/bvh/: mod.rs
src/display/: mod.rs
src/filter/: boxfilter.rs  gaussian.rs  mitchell.rs  mod.rs
src/geometry/: bbox.rs  matrix.rs  mesh.rs  mod.rs  normal.rs  plane.rs  point.rs  sphere.rs  triangle.rs  vector.rs
src/integrator/: ao.rs  directlighting.rs  mod.rs  normal.rs  path.rs  whitted.rs
src/light/: diffuse.rs  distant.rs  infinite.rs  mod.rs  point.rs
src/material/: glass.rs  matte.rs  metal.rs  mirror.rs  mod.rs  plastic.rs  substrate.rs  translucent.rs  uber.rs
src/parser/: lexer.rs  mod.rs  parser.rs
src/pbrt/: lexer.rs  mod.rs  parser.rs
src/sampler/: lowdiscrepancy.rs  mod.rs  zerotwosequence.rs
src/sampling/: distribution1d.rs  distribution2d.rs  mod.rs
src/shapes/: cylinder.rs  disk.rs  mesh.rs  mod.rs  plymesh.rs  sphere.rs
src/texture/: checkerboard.rs  constant.rs  fbm.rs  image.rs  imagemap.rs  mod.rs  scale.rs
tests/: efloat.rs  shapes.rs
