[package]
name = "rustracer"
version = "0.1.0"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[features]
default = ["minifb", "openexr"]

[dependencies]
approx = "0.1"
bitflags = "1"
chrono = "0.4"
clap = "2"
combine = "2"
crossbeam = "0.3"
error-chain = "0.11"
# ieee754 = "0.2"
ieee754 = { git = "https://github.com/abusch/ieee754.git" }
image = "0.17"
indicatif = "0.8"
itertools = "0.7"
lazy_static = "0.2"
light_arena = "0.1"
minifb = { version = "0.10", optional = true }
num = "0.1"
num_cpus = "1"
openexr = { version = "0.5", optional = true }
parking_lot = {version = "0.4", features = ["nightly"]}
ply-rs = "0.1" # { version = "0.1.1", git = "https://github.com/abusch/ply-rs.git" }
slog = { version = "2", features = ["max_level_debug", "release_max_level_info"] }
slog-scope = "4"
slog-term = "2"
thread-id = "3"
tobj = "0.1"

[dev-dependencies]
rand = "0.3"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false

[patch.crates-io]
skeptic = { git = "https://github.com/budziq/rust-skeptic"}
