[package]
name = "rustracer"
version = "0.1.0"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]

[dependencies]
rustracer-core = { path = "rustracer-core/"}
clap = "2"
error-chain = "0.11"
indicatif = "0.8"
slog = { version = "2", features = ["max_level_debug", "release_max_level_info"] }
slog-scope = "4"
slog-term = "2"

[profile.dev]
opt-level = 1
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true

[patch.crates-io]
skeptic = { git = "https://github.com/budziq/rust-skeptic"}

[workspace]
