[package]
name = "rustracer"
version = "0.1.0"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]

[dependencies]
rustracer-core = { path = "../rustracer-core/"}
clap = "2"
failure = "0.1"
indicatif = "0.8"
slog = { version = "2", features = ["max_level_debug", "release_max_level_info"] }
slog-scope = "4"
slog-term = "2"
