[package]
name = "rustracer"
version = "0.1.0"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]

[dependencies]
rustracer-core = { path = "../rustracer-core/"}
clap = "2"
failure = "0.1"
indicatif = "0.8"
log = "0.4"
# flexi_logger = "0.6"
flexi_logger = { git = "https://github.com/abusch/flexi_logger"}
