[package]
name = "rustracer-core"
version = "0.1.0"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]
edition = "2018"

[features]
default = ["exr"]
display = ["minifb"]
exr = ["openexr"]

[dependencies]
anyhow = "1"
approx = "0.3"
atomic = "0.4"
bitflags = "1"
byteorder = "1.2"
chrono = "0.4"
combine = "2"
crossbeam = "0.7"
image = "0.23"
indicatif = "0.14"
itertools = "0.9"
lazy_static = "1.3"
light_arena = "1.0.1"
log = "0.4"
minifb = { version = "0.16", optional = true }
ndarray = { version = "0.13", features = ["rayon"] }
num = "0.2"
num_cpus = "1"
openexr = { version = "0.7", optional = true }
parking_lot = "0.10"
ply-rs = "0.1"
rayon = "1"
state = { version = "0.4", features = ["tls"]}
thread-id = "3"

[dev-dependencies]
rand = "0.7"
quickcheck = "0.9"
