[package]
name = "rustracer-core"
version = "0.1.0"
authors = ["Antoine Büsch <antoine.busch@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
approx = "0.5"
atomic = "0.5"
bitflags = "1"
byteorder = "1.4"
chrono = "0.4"
# combine = "2"
crossbeam = "0.8"
exr = "1.3"
image = "0.23"
indicatif = "0.16"
itertools = "0.10"
lazy_static = "1.4"
light_arena = "1.0.1"
log = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
num_cpus = "1"
parking_lot = "0.11"
ply-rs = "0.1"
rayon = "1"
state = { version = "0.5", features = ["tls"]}
thread-id = "4"
nom = "7.0"

[dev-dependencies]
rand = "0.8"
quickcheck = "1"
